<package>
	<name>jrtplib</name>
	<version>1.2.3</version>
	<description>
	  Jrtplib is an object oriented RTP library written in C++. 
     
      http://research.edm.uhasselt.e/~jori/page/index.php?n=CS.Jrtplib
	</description>
	<maintainer email="MBurke@csir.co.za">MBurke</maintainer>
	<maintainer email="NChauke@csir.co.za">NChauke</maintainer>
	<license>MIT</license>
	<url type="repository">https://github.com/j0r1/JRTPLIB.git</url>

	<buildtool_depend>cmake</buildtool_depend>

	<run_depend>catkin</run_depend>

	<export>
		<build_type>cmake</build_type>
		<cpp lflags="-L${prefix}/jrtplib/ -ljrtp" cflags="-I${prefix}/jrtplib/include"/>
	</export>
</package>
